--- a/ZtImage/stylesheets/dialog.css
+++ b/ZtImage/stylesheets/dialog.css
@@ -7,7 +7,7 @@
 
 .topArea{width: 100%; height: 20px; background-color:#3c3f41;}
 
-.rightArea{width: 100%; height: 100%; float: left; display: inline; padding: 10px}
+.rightArea{width:auto; height: 100%; float: left; display: inline; padding: 10px}
 
 .defbackground{background-color: #3c3f41}
 
@@ -57,7 +57,7 @@
 /* show area */
 .edit-box{width: 100%; height: 100%}
 
-.edit-box .compoment{}
+.edit-box .compoment{ width: 100%; height: 100%}
 
 /* color style */
 
