--- a/stylesheets/dialog.css
+++ b/stylesheets/dialog.css
@@ -8,9 +8,9 @@ html, body{overflow: hidden}
 
 .leftArea{width: 200px; height:100%; max-width: 200px; float: left; padding: 10px 0px 10px 8px}
 
-.topArea{width: 100%; height: 20px; background-color:#3c3f41;}
+.topArea{width: 100%; height: 22px; background-color:#27323A;}
 
-.rightArea{float: left; display: inline; padding: 10px; height: 100%}
+.rightArea{float: left; display: inline; height: 100%}
 
 .def-text{color: #f1f1f1; font: 300 14px/15px 'Microsoft YaHei'; cursor: default}
 
@@ -29,7 +29,7 @@ html, body{overflow: hidden}
 
 
 /* index box */
-.nav-box{float: left;}
+.nav-box{float: left; width: 100%}
 
 .nav-box .nav-el{float: left; list-style-type: none; margin: 2px 5px 2px 0px; padding: 0px 10px}
 
@@ -40,7 +40,7 @@ html, body{overflow: hidden}
 
 /* tool area */
 
-.tool-Box{width: 100%; height: 900px; float: left}
+.tool-Box{width: 100%; height: 100%; float: left}
 
 .tool-Box .logo{float: right; margin-right: 10px; border-radius: 2px}
 
@@ -56,9 +56,9 @@ html, body{overflow: hidden}
 
 
 /* show area */
-.edit-box{display: inline; width: 100%; height: 100%; float: left}
+.edit-box{display: inline; width: 100%; height: 100%; float: left;  padding: 10px;}
 
-.edit-box .compoment{ width: 100%; height: 94%;}
+.edit-box .compoment{ width: 100%; height: 94%; max-width: 100%; max-height: 94%; min-width: 100%; min-height: 94%}
 
 /* color style */
 
