--- a/stylesheets/dialog.css
+++ b/stylesheets/dialog.css
@@ -6,9 +6,9 @@ html, body{overflow: hidden}
 
 .dialog{float: left;}
 
-.leftArea{width: 200px; height:100%; max-width: 200px; float: left; padding: 10px 0px 10px 8px}
+.leftArea{width: 200px; height:100%; max-width: 200px; float: left; padding: 0px 0px 10px 0px}
 
-.topArea{width: 100%; height: 22px; background-color:#27323A;}
+.topArea{width: 100%; height: 30px; vertical-align: middle}
 
 .rightArea{float: left; display: inline; height: 100%}
 
@@ -26,13 +26,14 @@ html, body{overflow: hidden}
 
 .tool-box-background{background-color: #464646}
 
+.dark-blue-bg{background-color:#27323A; }
 /* animate */
 
 
 /* index box */
-.nav-box{float: left; width: 100%}
+.nav-box{float: left; width: 100%; vertical-align: middle; height: 30px}
 
-.nav-box .nav-el{float: left; list-style-type: none; margin: 2px 5px 2px 0px; padding: 0px 10px}
+.nav-box .nav-el{float: left; list-style-type: none; margin: 2px 5px 2px 0px; padding: 5px 10px;}
 
 .nav-el:first-child{margin: 2px 5px 2px 10px;}
 
@@ -41,11 +42,13 @@ html, body{overflow: hidden}
 
 /* tool area */
 
-.tool-Box{width: 100%; height: 100%; float: left}
+.tool-Box{width: 100%; height: 100%; float: left;}
+
+.tool-Box .toolHeader{height: 25px; padding-top: 5px; padding-left: 8px; box-shadow:0px 0px 1px #1e1e1e; font-size: 14px}
 
 .tool-Box .logo{float: right; margin-right: 10px; border-radius: 2px}
 
-.function-group{ float: left; width: 96%;  margin: 10px 0px 0px 0px; overflow: hidden}
+.function-group{ float: left; width: 96%;  margin: 10px 0px 0px 8px; overflow: hidden}
 
 .function-group-el{list-style-type: none; float: left; margin: 5px; width: 20px; height: 20px; display: inline}
 
