--- a/extensions/skubuilder/htmlcontent/skuTemplate.css
+++ b/extensions/skubuilder/htmlcontent/skuTemplate.css
@@ -1,1 +1,2 @@
-.sku_dialog{width: 200px; height: 300px; margin: auto auto; background-color: #595959; position: absolute; top: 100px; left: 300px}
+.ext_dialog{width: 800px; height: 600px;background-color: #595959; position: absolute; top: 100px; left: 300px; border-radius: 4px; border: 1px solid #777}
+.ext_header{font: 300 20px/30px "Simsun"; text-align: left; color: #FFF; cursor:default; padding-left: 20px;-webkit-user-select:none;}
