--- a/stylesheets/dialog.css
+++ b/stylesheets/dialog.css
@@ -27,6 +27,10 @@ html, body{overflow: hidden}
 .tool-box-background{background-color: #464646}
 
 .dark-blue-bg{background-color:#27323A; }
+
+.shadow{box-shadow: 0px 0px 10px #555555}
+
+
 /* animate */
 
 
