--- a/stylesheets/dialog.css
+++ b/stylesheets/dialog.css
@@ -1,53 +1,45 @@
+@charset "utf-8";
 
-/* ui effect */
-.drag{position: absolute}
-
-.drop{position: relative}
-
-.defbackground{background-color: #3c3f41}
-
-.tool-box-background{background-color: #464646}
-
-.dark-blue-bg{background-color:#27323A; }
-
-.shadow{box-shadow: 0px 0px 10px #555555}
-
-/* index box */
-.nav-box{float: left; width: 100%; vertical-align: middle; height: 30px}
-
-.nav-box .nav-el{float: left; list-style-type: none; margin: 2px 5px 2px 0px; padding: 5px 10px;}
-
-.nav-el:first-child{margin: 2px 5px 2px 10px;}
-
-.nav-el:hover{background-color: #191919;}
+body{ margin: 0; padding: 0; overflow: hidden; }
+/*frame*/
+.g-frame{*zoom:1; width: 100%; height: 100%;}
+.g-frame:after{display:block;visibility:hidden;clear:both;height:0;overflow:hidden;content:'.';}
+.g-fleft{width:280px; height:100%; max-width: 280px; float: left; background-color: #393939}
+.g-fright{float: right; height: 100%; margin-right: -280px; width: 100%}
+.g-ftop{width: 100%; height: 32px;}
 
 
-/* tool area */
 
-.tool-Box{width: 100%; height: 100%; float: left;}
+/* dialog  */
+.u-ico{width: 24px; height: 24px;}
+.u-ttl{font-size: 14px; line-height: 22px; height: 22px;  color: #fff; }
 
-.tool-Box .toolHeader{height: 25px; padding-top: 5px; padding-left: 8px; box-shadow:0px 0px 1px #1e1e1e; font-size: 14px}
+/* nav box [com-type="navBox"]*/
+.g-nav{width:100%; height: 32px; background-color: #11b4ea;}
+.u-nav{padding: 0 10px}
+.u-nav:hover{background-color: #3f3f3f}
 
-.tool-Box .logo{float: right; margin-right: 10px; border-radius: 2px}
+/* toolbox [com-type="toolBox"]*/
+.u-tlb{width:280px; height: 100%;}
+.u-tlb .g-ttl{overflow: hidden; height: 32px; background-color: #54cff8;}
+.g-ttl .u-ico{float: right; margin: auto 15px auto 0 }
 
-.function-group{ float: left; width: 96%;  margin: 10px 0px 0px 8px; overflow: hidden}
+/* tools */
+.g-fcg{width: 100%; margin: 5px 0;}
+.g-fcg .u-ttl{ margin: 10px 0px 10px 15px}
+.u-fcg-el{width: 26px; height: 26px;}
+.u-fcg-el:hover{border: 1px solid #11b4ea; box-shadow:0 0 10px #06C; border-radius: 6px; }
 
-.function-group-el{list-style-type: none; float: left; margin: 5px; width: 20px; height: 20px; display: inline}
-
-.function-group-el img{border-radius: 2px;}
-
-.function-group-el img:hover{border:1px solid #40c7ff}
-
-.function-group-el img.selected{border:1px solid #40c7ff}
+.g-ttl .u-ttl, .g-nav .u-nav{font-size: 16px; line-height: 32px; height: 32px;  color: #fff; float: left; margin-left: 15px; display: block; overflow: hidden; cursor: default}
 
 
-/* show area */
-.edit-box{display: inline; width: 100%; height: 100%; float: left;  padding: 10px;}
+/* editbox [com-type="editBox"]*/
+.g-edbox{width: 100%; height: 100%}
+.g-edbox .m-text{width: 100%; height: 100%;}
 
-.edit-box .compoment{ width: 100%; height: 94%; max-width: 100%; max-height: 94%; min-width: 100%; min-height: 94%}
+/*function*/
+.f-drag{position: absolute}
+.f-drop{position: relative}
 
-/* color style */
-
-.def-grey{color: #d7d7d7}
 
 
