--- a/stylesheets/patch.css
+++ b/stylesheets/patch.css
@@ -7,7 +7,7 @@ div,p,ul,ol,li{margin:0;padding:0;}
 .zt-g-bd{float:left; width:990px;vertical-align:bottom}
 .zt-g-bd img{vertical-align:bottom; border: none}
 
-.m-lists{list-style-type:none}
+.g-li{list-style-type:none}
 .u-bt{cursor:pointer}
 .u-defbt{cursor:default; display:none}
 .u-oldp{text-decoration:line-through; margin-left:10px; font-size:14px; color:#6a6a6a}
@@ -27,4 +27,4 @@ div,p,ul,ol,li{margin:0;padding:0;}
 
 
 /* font global*/
-.zt-g-bd p, .zt-g-bd a, .zt-g-bd span{font-family: Helvetica, "Nimbus Sans L", Arial, "Liberation Sans", "Hiragino Sans GB", "Microsoft YaHei", "Wenquanyi Micro Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif; letter-spacing: 1px}
+.zt-g-bd p, .zt-g-bd a, .zt-g-bd span, .zt-g-bd strong{font-family: Helvetica, "Nimbus Sans L", Arial, "Liberation Sans", "Hiragino Sans GB", "Microsoft YaHei", "Wenquanyi Micro Hei", "ST Heiti", SimHei, "WenQuanYi Zen Hei Sharp", sans-serif; letter-spacing: 1px}
